--- a/src/main/resources/templates/criar_historico.html
+++ b/src/main/resources/templates/criar_historico.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <title th:text="${historico.id != null ? 'Editar Histórico de Interações' : 'Criar Histórico de Interações'}"></title>
+    <title th:text="#{historico.titulo}"></title>
+
     <style>
         .form-container {
             background-color: #f8f9fa;
@@ -34,7 +34,7 @@
 <body>
 <div class="container mt-4">
     <div class="row">
-        <h1 class="mb-4 text-center">Historico de Interações</h1>
+        <h1 class="mb-4 text-center" th:text="#{historico.titulo}"></h1>
     </div>
     <div class="row">
         <div class="col-md-8 offset-md-2 form-container">
@@ -42,45 +42,38 @@
 
                 <!-- Proposta de Negócio -->
                 <div class="mb-3">
-                    <label for="propostaNegocio" class="form-label">Qual é a proposta de negócio?</label>
+                    <label for="propostaNegocio" class="form-label" th:text="#{historico.proposta_negocio}"></label>
                     <input type="text" id="propostaNegocio" th:field="*{propostaNegocio}" class="form-control" th:errorclass="is-invalid"/>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('propostaNegocio')}" th:errors="*{propostaNegocio}">Proposta de negócio inválida</div>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('propostaNegocio')}" th:text="#{propostaNegocio.invalida}"></div>
                 </div>
 
                 <!-- Contrato Assinado -->
                 <div class="mb-3">
-                    <label for="contratoAssinado" class="form-label">Contrato Assinado:</label>
+                    <label for="contratoAssinado" class="form-label" th:text="#{historico.contrato_assinado}"></label>
                     <select id="contratoAssinado" th:field="*{contratoAssinado}" class="form-select" th:errorclass="is-invalid">
-                        <option value="" disabled>Selecione uma opção</option>
+                        <option value="" disabled th:text="#{historico.selecione_opcao}"></option>
                         <option th:each="opcao : ${opcoesContrato}"
                                 th:value="${opcao.name()}"
-                                th:text="${opcao.descricao}"
-                                th:selected="${opcao == 'Sim'}"></option>
+                                th:text="#{${opcao.descricao}}"></option>
                     </select>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('contratoAssinado')}" th:errors="*{contratoAssinado}">Opção de contrato inválida</div>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('contratoAssinado')}" th:text="#{contratoAssinado.invalido}"></div>
                 </div>
 
                 <!-- Feedback sobre Serviços e Produtos -->
-                <div class="mb-3">
-                    <label for="feedbackServicosProdutos" class="form-label">Como foi o feedback sobre serviços e produtos?</label>
-                    <textarea id="feedbackServicosProdutos" th:field="*{feedbackServicosProdutos}" class="form-control" rows="4"></textarea>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('feedbackServicosProdutos')}" th:errors="*{feedbackServicosProdutos}">Feedback inválido</div>
+                <div class="form-group">
+                    <label for="feedbackServicosProdutos" class="form-label" th:text="#{historico.feedback_servicos_produtos}"></label>
+                    <textarea id="feedbackServicosProdutos" class="form-control" th:field="*{feedbackServicosProdutos}" th:errorclass="is-invalid"></textarea>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('feedbackServicosProdutos')}" th:text="#{feedbackServicosProdutos.invalido}"></div>
                 </div>
 
-                <!-- Empresa -->
-                <div class="mb-3">
-                    <label for="empresa" class="form-label">Selecione a empresa associada:</label>
-                    <select class="form-select" id="empresa" th:field="*{empresa.id}" th:errorclass="is-invalid">
-                        <option value="" selected>Selecione a Empresa</option>
-                        <option th:each="e : ${empresas}" th:value="${e.id}" th:text="${e.nome}"></option>
-                    </select>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('empresa.id')}" th:errors="*{empresa.id}">Empresa inválida</div>
-                </div>
+                <!-- Campo oculto para ID da Empresa -->
+                <input type="hidden" th:field="*{empresa.id}">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('empresa.id')}" th:text="#{empresa.id.invalido}"></div>
 
                 <!-- Botões -->
-                <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-primary">Salvar</button>
-                    <a class="btn btn-secondary" th:href="@{/empresas/{id}/detalhes(id=${historico.empresa.id})}">Cancelar</a>
+                <div class="d-grid gap-2 mt-4"> <!-- Adicionada a classe mt-4 -->
+                    <button type="submit" class="btn btn-primary" th:text="#{historico.salvar}">Salvar</button>
+                    <a class="btn btn-secondary" th:href="@{/empresas/{id}/detalhes(id=${historico.empresa.id})}" th:text="#{historico.cancelar}">Cancelar</a>
                 </div>
             </form>
         </div>
