--- a/src/main/resources/templates/detalhes_empresa.html
+++ b/src/main/resources/templates/detalhes_empresa.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
-    <title>Detalhes da Empresa</title>
+    <title th:text="#{details.title}"></title>
     <style>
         .card-content dl dt {
             font-weight: bold;
@@ -19,131 +19,146 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="center-align">Detalhes da Empresa</h1>
+    <h1 class="center-align" th:text="#{details.title}"></h1>
 
     <!-- Informações Gerais -->
     <div class="card">
         <div class="card-content">
-            <span class="card-title">Informações Gerais</span>
+            <span class="card-title"><strong th:text="#{general_info}">Informações Gerais</strong></span>
             <dl>
-                <dt>Nome:</dt>
-                <dd th:text="${empresa.nome}"></dd>
-                <dt>Tamanho:</dt>
-                <dd th:text="${empresa.tamanho}"></dd>
-                <dt>Setor:</dt>
-                <dd th:text="${empresa.setor}"></dd>
-                <dt>Localização:</dt>
-                <dd th:text="${empresa.localizacaoGeografica}"></dd>
-                <dt>Número de Funcionários:</dt>
-                <dd th:text="${empresa.numeroFuncionarios}"></dd>
-                <dt>Tipo de Empresa:</dt>
-                <dd th:text="${empresa.tipoEmpresa.getDescricao()}"></dd>
-                <dt>Cliente:</dt>
-                <dd th:text="${empresa.cliente}"></dd>
+                <div style="display: flex; margin-bottom: 10px;">
+                    <dt th:text="#{general_info.nome}">Nome:</dt>
+                    <dd th:text="${empresa.nome}" style="margin-left: 10px;"></dd>
+                </div>
+                <div style="display: flex; margin-bottom: 10px;">
+                    <dt th:text="#{general_info.tamanho}">Tamanho:</dt>
+                    <dd th:text="#{${empresa.tamanho.messageKey}}" style="margin-left: 10px;"></dd>
+                </div>
+                <div style="display: flex; margin-bottom: 10px;">
+                    <dt th:text="#{general_info.setor}">Setor:</dt>
+                    <dd th:text="#{${empresa.setor.messageKey}}" style="margin-left: 10px;"></dd>
+                </div>
+                <div style="display: flex; margin-bottom: 10px;">
+                    <dt th:text="#{general_info.localizacao}">Localização:</dt>
+                    <dd th:text="${empresa.localizacaoGeografica}" style="margin-left: 10px;"></dd>
+                </div>
+                <div style="display: flex; margin-bottom: 10px;">
+                    <dt th:text="#{general_info.num_funcionarios}">Número de Funcionários:</dt>
+                    <dd th:text="${empresa.numeroFuncionarios}" style="margin-left: 10px;"></dd>
+                </div>
+                <div style="display: flex; margin-bottom: 10px;">
+                    <dt th:text="#{general_info.tipo_empresa}">Tipo de Empresa:</dt>
+                    <dd th:text="#{${empresa.tipoEmpresa.descricao}}" style="margin-left: 10px;"></dd>
+                </div>
+                <div style="display: flex; margin-bottom: 10px;">
+                    <dt th:text="#{general_info.cliente}">Cliente:</dt>
+                    <dd th:text="${empresa.cliente}" style="margin-left: 10px;"></dd>
+                </div>
             </dl>
         </div>
     </div>
 
+
     <!-- Lista de Tendências de Gastos -->
     <div class="card">
         <div class="card-content">
-            <span class="card-title">Tendências de Gastos</span>
+            <span class="card-title" th:text="#{gastos.titulo}">Tendências de Gastos</span>
             <div class="collection">
-                <a href="#" class="collection-item active">Ano: 2024</a>
+                <a href="#" class="collection-item active" th:text="#{gasto.ano}">Ano: 2024</a>
                 <div th:each="tendencia : ${empresa.tendencias}">
                     <p class="collection-item">
-                        <span th:text="'Ano: ' + ${tendencia.ano}"></span><br>
-                        <span th:text="'Gasto em Marketing: R$ ' + ${tendencia.gastoMarketing}"></span><br>
-                        <span th:text="'Gasto em Automação: R$ ' + ${tendencia.gastoAutomacao}"></span><br>
+                        <span th:text="#{gastos.ano} + ' ' + ${tendencia.ano}"></span><br>
+                        <span th:text="#{gastos.marketing} + ' ' + ${tendencia.gastoMarketing}"></span><br>
+                        <span th:text="#{gastos.automacao} + ' ' + ${tendencia.gastoAutomacao}"></span><br>
                     </p>
                     <div class="secondary-content">
-                        <a class="btn-small waves-effect waves-light orange" th:href="@{/tendencias/{id}/editar(id=${tendencia.id})}">Editar</a>
-                        <form th:action="@{/tendencias/{id}/remover(id=${tendencia.id})}" method="post" onsubmit="return confirm('Tem certeza que deseja deletar esta tendência?');">
-                            <button type="submit" class="btn-small waves-effect waves-light red">Deletar</button>
+                        <a class="btn-small waves-effect waves-light orange" th:href="@{/tendencias/{id}/editar(id=${tendencia.id})}" th:text="#{gastos.editar}">Editar</a>
+                        <form th:action="@{/tendencias/{id}/remover(id=${tendencia.id})}" method="post" onsubmit="return confirm('Você tem certeza que deseja deletar esta tendência?');">
+                            <button type="submit" class="btn-small waves-effect waves-light red" th:text="#{gastos.deletar}">Deletar</button>
                         </form>
                     </div>
                 </div>
             </div>
-            <a class="btn waves-effect waves-light green" th:if="${showCreateButtonTendencia}" th:href="@{/tendencias/nova(idEmpresa=${empresa.id})}">Criar Nova Tendência de Gastos</a>
+            <a class="btn waves-effect waves-light green" th:if="${showCreateButtonTendencia}" th:href="@{/tendencias/nova(idEmpresa=${empresa.id})}" th:text="#{gastos.criar_nova}">Criar Nova Tendência de Gastos</a>
         </div>
     </div>
 
     <!-- Lista de Desempenho Financeiro -->
     <div class="card">
         <div class="card-content">
-            <span class="card-title">Desempenho Financeiro</span>
+            <span class="card-title" th:text="#{desempenho.titulo}">Desempenho Financeiro</span>
             <div class="collection">
-                <a href="#" class="collection-item active">Ano: 2024</a>
+                <a href="#" class="collection-item active" th:text="#{gasto.ano}">Ano: 2024</a>
                 <div th:each="desempenho : ${empresa.desempenhos}">
                     <p class="collection-item">
-                        <span th:text="'Receita: R$ ' + ${desempenho.receita}"></span><br>
-                        <span th:text="'Lucro: R$ ' + ${desempenho.lucro}"></span><br>
-                        <span th:text="'Crescimento: ' + ${desempenho.crescimento} + '%'"></span><br>
+                        <span th:text="#{desempenho.receita}  + ' ' + ${desempenho.receita}"></span><br>
+                        <span th:text="#{desempenho.lucro}  + ' ' + ${desempenho.lucro}"></span><br>
+                        <span th:text="#{desempenho.crescimento}  + ' ' + ${desempenho.crescimento}"></span><br>
                     </p>
                     <div class="secondary-content">
-                        <a class="btn-small waves-effect waves-light orange" th:href="@{/desempenho/{id}/editar(id=${desempenho.id})}">Editar</a>
-                        <form th:action="@{/desempenho/{id}/remover(id=${desempenho.id})}" method="post" onsubmit="return confirm('Tem certeza que deseja deletar este desempenho?');">
-                            <button type="submit" class="btn-small waves-effect waves-light red">Deletar</button>
+                        <a class="btn-small waves-effect waves-light orange" th:href="@{/desempenho/{id}/editar(id=${desempenho.id})}" th:text="#{desempenho.editar}">Editar</a>
+                        <form th:action="@{/desempenho/{id}/remover(id=${desempenho.id})}" method="post" onsubmit="return confirm('Você tem certeza que deseja deletar este desempenho?');">
+                            <button type="submit" class="btn-small waves-effect waves-light red" th:text="#{desempenho.deletar}">Deletar</button>
                         </form>
                     </div>
                 </div>
             </div>
-            <a class="btn waves-effect waves-light green" th:if="${showCreateButtonDesempenho}" th:href="@{/desempenho/novo(idEmpresa=${empresa.id})}">Criar Novo Desempenho Financeiro</a>
+            <a class="btn waves-effect waves-light green" th:if="${showCreateButtonDesempenho}" th:href="@{/desempenho/novo(idEmpresa=${empresa.id})}" th:text="#{desempenho.criar_novo}">Criar Novo Desempenho Financeiro</a>
         </div>
     </div>
 
-    <!-- Lista de Histórico de Interações -->
+    <!-- Histórico de Interações -->
     <div class="card">
         <div class="card-content">
-            <span class="card-title">Histórico de Interações</span>
+            <span class="card-title" th:text="#{historico.titulo}">Histórico de Interações</span>
             <div class="collection">
-                <a href="#" class="collection-item active">Ano: 2024</a>
+                <a href="#" class="collection-item active" th:text="#{gasto.ano}">Ano: 2024</a>
                 <div th:each="historico : ${empresa.historicos}">
                     <p class="collection-item">
-                        <span th:text="'Contrato Assinado: ' + ${historico.contratoAssinado}"></span><br>
-                        <span th:text="'Proposta de Negócio: ' + ${historico.propostaNegocio}"></span><br>
-                        <span th:text="'Feedback: ' + ${historico.feedbackServicosProdutos}"></span><br>
+                        <span th:text="#{historico.contrato} + ' ' + #{${historico.contratoAssinado.getDescricao()}}"></span><br>
+                        <span th:text="#{historico.proposta}  + ' ' + ${historico.propostaNegocio}"></span><br>
+                        <span th:text="#{historico.feedback}  + ' ' + ${historico.feedbackServicosProdutos}"></span><br>
                     </p>
                     <div class="secondary-content">
-                        <a class="btn-small waves-effect waves-light orange" th:href="@{/historico/{id}/editar(id=${historico.id})}">Editar</a>
-                        <form th:action="@{/historico/{id}/remover(id=${historico.id})}" method="post" onsubmit="return confirm('Tem certeza que deseja deletar este histórico?');">
-                            <button type="submit" class="btn-small waves-effect waves-light red">Deletar</button>
+                        <a class="btn-small waves-effect waves-light orange" th:href="@{/historico/{id}/editar(id=${historico.id})}" th:text="#{historico.editar}">Editar</a>
+                        <form th:action="@{/historico/{id}/remover(id=${historico.id})}" method="post" onsubmit="return confirm('Você tem certeza que deseja deletar este histórico?');">
+                            <button type="submit" class="btn-small waves-effect waves-light red" th:text="#{historico.deletar}">Deletar</button>
                         </form>
                     </div>
                 </div>
             </div>
-            <a class="btn waves-effect waves-light green" th:if="${showCreateButtonHistorico}" th:href="@{/historico/novo(idEmpresa=${empresa.id})}">Criar Novo Histórico de Interação</a>
+            <a class="btn waves-effect waves-light green" th:if="${showCreateButtonHistorico}" th:href="@{/historico/novo(idEmpresa=${empresa.id})}" th:text="#{historico.criar_novo}">Criar Novo Histórico de Interação</a>
         </div>
     </div>
 
-    <!-- Lista de Comportamento de Negócios -->
+    <!-- Comportamento de Negócios -->
     <div class="card">
         <div class="card-content">
-            <span class="card-title">Comportamento de Negócios</span>
+            <span class="card-title" th:text="#{comportamento.titulo}">Comportamento de Negócios</span>
             <div class="collection">
-                <a href="#" class="collection-item active">Ano: 2024</a>
+                <a href="#" class="collection-item active" th:text="#{gasto.ano}">Ano: 2024</a>
                 <div th:each="comportamento : ${empresa.comportamentos}">
                     <p class="collection-item">
-                        <span th:text="'Interações na Plataforma: ' + ${comportamento.interacoesPlataforma}"></span><br>
-                        <span th:text="'Frequência de Uso: ' + ${comportamento.frequenciaUso}"></span><br>
-                        <span th:text="'Feedback: ' + ${comportamento.feedback}"></span><br>
-                        <span th:text="'Uso de Recursos Específicos: ' + ${comportamento.usoRecursosEspecificos}"></span><br>
+                        <span th:text="#{comportamento.interacoes}  + ' ' + ${comportamento.interacoesPlataforma}"></span><br>
+                        <span th:text="#{comportamento.frequencia}  + ' ' + ${comportamento.frequenciaUso}"></span><br>
+                        <span th:text="#{comportamento.feedback}  + ' ' + ${comportamento.feedback}"></span><br>
+                        <span th:text="#{comportamento.uso_recursos} + ' ' + #{${comportamento.usoRecursosEspecificos.chave}}"></span><br>
                     </p>
                     <div class="secondary-content">
-                        <a class="btn-small waves-effect waves-light orange" th:href="@{/comportamento/{id}/editar(id=${comportamento.id})}">Editar</a>
-                        <form th:action="@{/comportamento/{id}/remover(id=${comportamento.id})}" method="post" onsubmit="return confirm('Tem certeza que deseja deletar este comportamento?');">
-                            <button type="submit" class="btn-small waves-effect waves-light red">Deletar</button>
+                        <a class="btn-small waves-effect waves-light orange" th:href="@{/comportamento/{id}/editar(id=${comportamento.id})}" th:text="#{comportamento.editar}">Editar</a>
+                        <form th:action="@{/comportamento/{id}/remover(id=${comportamento.id})}" method="post" onsubmit="return confirm('Você tem certeza que deseja deletar este comportamento?');">
+                            <button type="submit" class="btn-small waves-effect waves-light red" th:text="#{comportamento.deletar}">Deletar</button>
                         </form>
                     </div>
                 </div>
             </div>
-            <a class="btn waves-effect waves-light green" th:if="${showCreateButtonComportamento}" th:href="@{/comportamento/novo(idEmpresa=${empresa.id})}">Criar Novo Comportamento de Negócio</a>
+            <a class="btn waves-effect waves-light green" th:if="${showCreateButtonComportamento}" th:href="@{/comportamento/novo(idEmpresa=${empresa.id})}" th:text="#{comportamento.criar_novo}">Criar Novo Comportamento de Negócios</a>
         </div>
     </div>
 
-    <a class="btn waves-effect waves-light blue" href="/empresas">Voltar para a lista</a>
+    <!-- Botão para voltar à lista de empresas -->
+    <a class="btn-large waves-effect waves-light" th:href="@{/empresas}" th:text="#{button.voltar}">Voltar para a lista</a>
 </div>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
