--- a/src/main/resources/templates/editar_comportamento.html
+++ b/src/main/resources/templates/editar_comportamento.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Editar Comportamento de Negócios</title>
+    <title th:text="#{titulo.comportamento}"></title>
+
     <style>
         .form-container {
             background-color: #f8f9fa;
@@ -32,40 +33,42 @@
 </head>
 <body>
 <div class="container mt-4">
-    <h1 class="mb-4 text-center">Editar Comportamento de Negócios</h1>
+    <h1 class="mb-4 text-center" th:text="#{titulo.comportamento}">Comportamento de Negócios</h1>
     <div class="row">
         <div class="col-md-8 offset-md-2 form-container">
             <form th:action="@{/comportamento/{id}/editar(id=${comportamento.id})}" th:object="${comportamento}" method="post">
 
                 <!-- Interações na Plataforma -->
                 <div class="mb-3">
-                    <label for="interacoesPlataforma" class="form-label">Quantas interações a empresa teve na plataforma?</label>
+                    <label for="interacoesPlataforma" class="form-label" th:text="#{label.interacoesPlataforma}"></label>
                     <input type="number" class="form-control" id="interacoesPlataforma" th:field="*{interacoesPlataforma}" th:errorclass="is-invalid"/>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('interacoesPlataforma')}" th:errors="*{interacoesPlataforma}"></div>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('interacoesPlataforma')}" th:text="#{erroInteracoesPlataforma}"></div>
                 </div>
 
                 <!-- Frequência de Uso -->
                 <div class="mb-3">
-                    <label for="frequenciaUso" class="form-label">Qual a frequência de uso da plataforma? (Em uma escala de 1 a 10)</label>
+                    <label for="frequenciaUso" class="form-label" th:text="#{label.frequenciaUso}"></label>
                     <input type="number" class="form-control" id="frequenciaUso" th:field="*{frequenciaUso}" th:errorclass="is-invalid"/>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('frequenciaUso')}" th:errors="*{frequenciaUso}"></div>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('frequenciaUso')}" th:text="#{erroFrequenciaUso}"></div>
                 </div>
 
                 <!-- Feedback -->
                 <div class="mb-3">
-                    <label for="feedback" class="form-label">Comentários e feedback sobre a plataforma</label>
+                    <label for="feedback" class="form-label" th:text="#{label.feedback}"></label>
                     <textarea class="form-control" id="feedback" th:field="*{feedback}" rows="3" th:errorclass="is-invalid"></textarea>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('feedback')}" th:errors="*{feedback}"></div>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('feedback')}" th:text="#{erroFeedback}"></div>
                 </div>
 
                 <!-- Uso de Recursos Específicos -->
                 <div class="mb-3">
-                    <label for="usoRecursosEspecificos" class="form-label">Você utiliza algum recurso específico?</label>
+                    <label for="usoRecursosEspecificos" class="form-label" th:text="#{usoRecursosEspecificos.label}"></label>
                     <select id="usoRecursosEspecificos" th:field="*{usoRecursosEspecificos}" class="form-select" th:errorclass="is-invalid">
-                        <option value="" disabled>Selecione uma opção</option>
-                        <option th:each="opcao : ${opcoesRecursos}" th:value="${opcao.name()}" th:text="${opcao.descricao}" th:selected="${opcao == 'SIM'}"></option>
+                        <option value="" disabled th:text="#{selecioneOpcao.label}"></option>
+                        <option th:each="opcao : ${opcoesRecursos}"
+                                th:value="${opcao.name()}"
+                                th:text="#{${opcao.chave}}"></option>
                     </select>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('usoRecursosEspecificos')}" th:errors="*{usoRecursosEspecificos}"></div>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('usoRecursosEspecificos')}" th:text="#{erroUsoRecursosEspecificos}"></div>
                 </div>
 
                 <!-- Campo oculto para ID da Empresa -->
@@ -74,8 +77,8 @@
 
                 <!-- Botões -->
                 <div class="d-grid">
-                    <button type="submit" class="btn btn-primary">Salvar</button>
-                    <a class="btn btn-secondary mt-2" th:href="@{/empresas/{id}/detalhes(id=${comportamento.empresa.id})}">Cancelar</a>
+                    <button type="submit" class="btn btn-primary" th:text="#{botao.salvar}"></button>
+                    <a class="btn btn-secondary mt-2" th:href="@{/empresas/{id}/detalhes(id=${comportamento.empresa.id})}" th:text="#{botao.cancelar}"></a>
                 </div>
             </form>
         </div>
