--- a/src/main/resources/templates/editar_desempenho.html
+++ b/src/main/resources/templates/editar_desempenho.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
-    <title>Editar Desempenho Financeiro</title>
+    <title th:text="#{titulo.Desempenho}"></title>
+
     <style>
         .form-container {
             background-color: #f8f9fa;
@@ -33,41 +34,41 @@
 <body>
 <div class="container mt-5">
     <div class="row">
-        <h1 class="mb-4 text-center">Editar Desempenho Financeiro</h1>
+        <h1 class="mb-4 text-center" th:text="#{titulo.Desempenho}"></h1>
     </div>
     <div class="row">
         <div class="col-md-8 offset-md-2 form-container">
             <form th:action="@{/desempenho/{id}/editar(id=${desempenho.id})}" method="post" th:object="${desempenho}">
 
-                <!-- Campo oculto para ID da Empresa -->
-                <input type="hidden" th:field="*{empresa.id}">
-                <div class="invalid-feedback" th:if="${#fields.hasErrors('empresa.id')}" th:errors="*{empresa.id}"></div>
-
                 <!-- Receita -->
                 <div class="mb-3">
-                    <label for="receita" class="form-label">Qual é a receita total?</label>
-                    <input type="number" step="0.01" class="form-control" id="receita" th:field="*{receita}" th:errorclass="is-invalid" placeholder="Digite a receita"/>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('receita')}" th:errors="*{receita}"></div>
+                    <label for="receita" class="form-label" th:text="#{label.receita}"></label>
+                    <input type="text" id="receita" th:field="*{receita}" class="form-control" th:errorclass="is-invalid"/>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('receita')}" th:text="#{erro.receita}"></div>
                 </div>
 
                 <!-- Lucro -->
                 <div class="mb-3">
-                    <label for="lucro" class="form-label">Qual foi o lucro em reais (R$)?</label>
-                    <input type="number" step="0.01" class="form-control" id="lucro" th:field="*{lucro}" th:errorclass="is-invalid" placeholder="Digite o lucro"/>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('lucro')}" th:errors="*{lucro}"></div>
+                    <label for="lucro" class="form-label" th:text="#{label.lucro}"></label>
+                    <input type="number" step="0.01" class="form-control" id="lucro" th:field="*{lucro}" th:errorclass="is-invalid"/>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('lucro')}" th:text="#{erro.lucro}"></div>
                 </div>
 
                 <!-- Crescimento -->
                 <div class="mb-3">
-                    <label for="crescimento" class="form-label">Qual foi o crescimento percentual?</label>
-                    <input type="number" step="0.01" class="form-control" id="crescimento" th:field="*{crescimento}" th:errorclass="is-invalid" placeholder="Digite o crescimento percentual"/>
-                    <div class="invalid-feedback" th:if="${#fields.hasErrors('crescimento')}" th:errors="*{crescimento}"></div>
+                    <label for="crescimento" class="form-label" th:text="#{label.crescimento}"></label>
+                    <input type="number" step="0.01" class="form-control" id="crescimento" th:field="*{crescimento}" th:errorclass="is-invalid"/>
+                    <div class="invalid-feedback" th:if="${#fields.hasErrors('crescimento')}" th:text="#{erro.crescimento}"></div>
                 </div>
+
+                <!-- Campo oculto para ID da Empresa -->
+                <input type="hidden" th:field="*{empresa.id}">
+                <div class="invalid-feedback" th:if="${#fields.hasErrors('empresa.id')}" th:errors="*{empresa.id}"></div>
 
                 <!-- Botões -->
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-primary">Atualizar</button>
-                    <a class="btn btn-secondary" th:href="@{/empresas/{id}/detalhes(id=${desempenho.empresa?.id})}">Cancelar</a>
+                    <button type="submit" class="btn btn-primary" th:text="#{botao.salvar}">Salvar</button>
+                    <a class="btn btn-secondary" th:href="@{/empresas/{id}/detalhes(id=${desempenho.empresa.id})}" th:text="#{botao.cancelar}">Cancelar</a>
                 </div>
             </form>
         </div>
@@ -76,4 +77,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
-
