--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,25 +7,29 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
-    <title>Lista de Empresas</title>
+    <title th:text="#{table.title}">Lista de Empresas</title>
 </head>
 <body>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">HyperReach</a>
+        <a class="navbar-brand" th:text="#{navbar.brand}">HyperReach</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" th:text="#{navbar.home}" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/empresas/nova">Cadastrar</a>
+                    <a class="nav-link" th:text="#{navbar.register}" href="/empresas/nova">Cadastrar</a>
                 </li>
             </ul>
+            <!-- Fragmento de Idioma alinhado à direita -->
+            <div class="d-flex ms-auto align-items-center">
+                <div th:replace="~{fragmentos :: idioma('empresas')}"></div>
+            </div>
         </div>
     </div>
 </nav>
@@ -33,7 +37,7 @@
 <div class="container mt-4">
     <div class="row mb-3">
         <div class="col-12">
-            <h1>Nossas Empresas Parceiras</h1>
+            <h1 th:text="#{table.title}">Nossas Empresas Parceiras</h1>
         </div>
     </div>
     <div class="row">
@@ -43,34 +47,37 @@
                     <table class="table table-hover">
                         <thead>
                         <tr>
-                            <th scope="col">Nome</th>
-                            <th scope="col">Tamanho</th>
-                            <th scope="col">Setor</th>
-                            <th scope="col">Localização</th>
-                            <th scope="col">Número de Funcionários</th>
-                            <th scope="col">Tipo de Empresa</th>
-                            <th scope="col">Cliente</th>
-                            <th scope="col">Ações</th>
+                            <th scope="col" th:text="#{table.name}">Nome</th>
+                            <th scope="col" th:text="#{table.size}">Tamanho</th>
+                            <th scope="col" th:text="#{table.sector}">Setor</th>
+                            <th scope="col" th:text="#{table.location}">Localização</th>
+                            <th scope="col" th:text="#{table.num_employees}">Número de Funcionários</th>
+                            <th scope="col" th:text="#{table.type}">Tipo de Empresa</th>
+                            <th scope="col" th:text="#{table.client}">Cliente</th>
+                            <th scope="col" th:text="#{table.actions}">Ações</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr th:each="empresa : ${empresas}">
                             <td th:text="${empresa.nome}"></td>
-                            <td th:text="${empresa.tamanho}"></td>
-                            <td th:text="${empresa.setor}"></td>
+                            <td th:text="#{${empresa.tamanho.messageKey}}"></td>
+                            <td th:text="#{${empresa.setor.messageKey}}"></td>
                             <td th:text="${empresa.localizacaoGeografica}"></td>
                             <td th:text="${empresa.numeroFuncionarios}"></td>
-                            <td th:text="${empresa.tipoEmpresa.getDescricao()}"></td>
+                            <td th:text="#{${empresa.tipoEmpresa.descricao}}"></td>
                             <td th:text="${empresa.cliente}"></td>
                             <td>
-                                <a class="btn btn-info btn-sm" th:href="@{/empresas/{id}/detalhes(id=${empresa.id})}">Detalhes</a>
-                                <a class="btn btn-warning btn-sm" th:href="@{/empresas/{id}/editar(id=${empresa.id})}">Editar</a>
+                                <a class="btn btn-info btn-sm" th:text="#{button.details}" th:href="@{/empresas/{id}/detalhes(id=${empresa.id})}">Detalhes</a>
+                                <a class="btn btn-warning btn-sm" th:text="#{button.edit}" th:href="@{/empresas/{id}/editar(id=${empresa.id})}">Editar</a>
                                 <form th:action="@{/empresas/{id}/remover(id=${empresa.id})}" method="post" style="display:inline;">
-                                    <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('Tem certeza que deseja remover esta empresa?')">Remover</button>
+                                    <button type="submit" class="btn btn-danger btn-sm" th:text="#{button.remove}"
+                                            onclick="return confirm('Tem certeza que deseja remover a empresa?');">Remover
+                                    </button>
                                 </form>
                             </td>
                         </tr>
                         </tbody>
+
                     </table>
                 </div>
             </div>
