--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,23 +7,23 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 
-    <title th:text="#{table.title}">Lista de Empresas</title>
+    <title th:text="#{index.title}">Lista de Empresas</title>
 </head>
 <body>
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container-fluid">
-        <a class="navbar-brand" th:text="#{navbar.brand}">HyperReach</a>
+        <a class="navbar-brand" th:text="#{index.navbar}">HyperReach</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:text="#{navbar.home}" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" th:text="#{index.home}" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:text="#{navbar.register}" href="/empresas/nova">Cadastrar</a>
+                    <a class="nav-link" th:text="#{index.register}" href="/empresas/nova">Cadastrar</a>
                 </li>
             </ul>
             <!-- Fragmento de Idioma alinhado à direita -->
@@ -37,7 +37,7 @@
 <div class="container mt-4">
     <div class="row mb-3">
         <div class="col-12">
-            <h1 th:text="#{table.title}">Nossas Empresas Parceiras</h1>
+            <h1 th:text="#{index.title}">Nossas Empresas Parceiras</h1>
         </div>
     </div>
     <div class="row">
@@ -47,14 +47,14 @@
                     <table class="table table-hover">
                         <thead>
                         <tr>
-                            <th scope="col" th:text="#{table.name}">Nome</th>
-                            <th scope="col" th:text="#{table.size}">Tamanho</th>
-                            <th scope="col" th:text="#{table.sector}">Setor</th>
-                            <th scope="col" th:text="#{table.location}">Localização</th>
-                            <th scope="col" th:text="#{table.num_employees}">Número de Funcionários</th>
-                            <th scope="col" th:text="#{table.type}">Tipo de Empresa</th>
-                            <th scope="col" th:text="#{table.client}">Cliente</th>
-                            <th scope="col" th:text="#{table.actions}">Ações</th>
+                            <th scope="col" th:text="#{index.table.name}">Nome</th>
+                            <th scope="col" th:text="#{index.table.size}">Tamanho</th>
+                            <th scope="col" th:text="#{index.table.sector}">Setor</th>
+                            <th scope="col" th:text="#{index.table.location}">Localização</th>
+                            <th scope="col" th:text="#{index.table.num_employees}">Número de Funcionários</th>
+                            <th scope="col" th:text="#{index.table.type}">Tipo de Empresa</th>
+                            <th scope="col" th:text="#{index.table.client}">Cliente</th>
+                            <th scope="col" th:text="#{index.table.actions}">Ações</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -67,10 +67,10 @@
                             <td th:text="#{${empresa.tipoEmpresa.descricao}}"></td>
                             <td th:text="${empresa.cliente}"></td>
                             <td>
-                                <a class="btn btn-info btn-sm" th:text="#{button.details}" th:href="@{/empresas/{id}/detalhes(id=${empresa.id})}">Detalhes</a>
-                                <a class="btn btn-warning btn-sm" th:text="#{button.edit}" th:href="@{/empresas/{id}/editar(id=${empresa.id})}">Editar</a>
+                                <a class="btn btn-info btn-sm" th:text="#{index.details}" th:href="@{/empresas/{id}/detalhes(id=${empresa.id})}">Detalhes</a>
+                                <a class="btn btn-warning btn-sm" th:text="#{index.edit}" th:href="@{/empresas/{id}/editar(id=${empresa.id})}">Editar</a>
                                 <form th:action="@{/empresas/{id}/remover(id=${empresa.id})}" method="post" style="display:inline;">
-                                    <button type="submit" class="btn btn-danger btn-sm" th:text="#{button.remove}"
+                                    <button type="submit" class="btn btn-danger btn-sm" th:text="#{index.remove}"
                                             onclick="return confirm('Tem certeza que deseja remover a empresa?');">Remover
                                     </button>
                                 </form>
